# esp32-baby-monitor

./: .gitignore  CMakeLists.txt  README.md  README_ADC.md  README_Hall_NTC.md  main_ADC.c  main_Hall_NTC.c  sdkconfig  sdkconfig 2.old  sdkconfig 3  sdkconfig 4  sdkconfig.old
ESP32_espnow_stream_audio/: Makefile  sdkconfig
ESP32_espnow_stream_audio/main/: CMakeLists.txt  audio.c  audio.h  color_out.h  dsp.c  dsp.h  main.c  sdRecording.c  sdRecording.h  transport.c  transport.h
ESP32_freertos_adc/main/: main.c
ESP32_freertos_queue/: CMakeLists.txt  README.md
ESP32_freertos_queue/main/: CMakeLists.txt  queue_main.c
ESP32_freertos_stream/: README.md
ESP32_freertos_stream/main/: main.c
ESP32_i2s_audio/: Makefile
ESP32_i2s_audio_queue/: CMakeLists.txt  README.md
STM8_NRF24/: esb_app.c  esb_app.h  stm8s105_nrf24.stw  stm8s105_nrf24.wed
STM8_TX/: main.c  rf24l01.c  rf24l01.h
esp32-node/: CMakeLists.txt
esp32-node/main/: CMakeLists.txt  Kconfig.projbuild  config.c  config.h  main.c  nrf24.c  nrf24.h  u_interface.c  u_interface.h  ui.c  ui.h  wifi_station.c  wifi_station.h
espnow/: README.md  sdkconfig
main/: .i2s_recv_std_config.c.icloud  .i2s_recv_std_config.h.icloud  .idf_component.yml.icloud  CMakeLists.txt  Kconfig.projbuild  audio_example_file.h  audio_example_file_o.h  cepstrum.c  config.c  config.h  espnow_mic.c  espnow_mic.h  espnow_recv.c  espnow_recv.h  espnow_send.c  espnow_send.h  fastconvolution.c  fft.c  fft.h  fftPeak.c  fftpeak.h  i2s_recv_std_config.c  i2s_recv_std_config.h  idf_component.yml  main.c  music.c  music.h  nrf24.c  sd_record.c  sd_record.h  u_interface.c  u_interface.h  unusedcode.txt  wifi_station.c  wifi_station.h  zcr.c  zcr.h
master/: test.txt
master/main/: main.c  (+3 more)
other_tools/: cepstrum.c  cepstrum.h  fastconvolution.c  generate_audio_file.py
tools/: cepstrum.c  cepstrum.h  fastconvolution.c  fastconvolution.h  fftPeak.c  test.txt
(+30 files in other folders)
